# finance.advenoh.pe.kr

./: .gitignore  README.md  blog-config.js  gatsby-config.js  gatsby-node.js  netlify.toml  package.json
.github/: git-commit-instructions.md
.github/workflows/: auto-merge-pr.yml  generate-readme.yml  generate-tags.yml
content/pages/: about.md  contact.md  index.md
content/posts/algorithm/: Pull-the-String.md
content/posts/appendix/: CMA의-종류.md  ETF-상품명-이해하기.md  자산-운용사-약어-모음.md  투자-용어.md
content/posts/articles/: 2024년-ISA-계좌-개편안-총-정리.md  CMA의-종류.md  CPI와-PPI의-차이점.md  ETF-고르는-기준.md  ETF-상품명-이해하기.md  IRP에서-안전자산-ETF는-어떤-것들이-있나.md  ISA.md  국내-미국다우존스-ETF중에서-어떤-것을-선택하면-좋을까.md  금리-환율-채권-주가-서로간의-상관관계.md  금융소득-종합과세-대상자-피하는-방법.md  나의-ETF-적립식-투자.md  달러-환전시-증권사-vs-은행권-어디가-좋을까요.md  드러켄밀러의 투자 조언.md  미국 3대 지수 차이점.md  미국-3대-지수-차이점.md  성장주와-가치주의-차이점.md  소수몽키-지수.md  연금저축이란.md  인터넷으로-내용증명-작성하기.md  주식 세금 종류.md  주식-ETF-종목-매매-타이밍-전략-정리.md  주식-시장-개장시간-정리.md  증권-계좌-종류별로-투자-가능한-항목-정리.md  증권계좌별로-어떤-주식을-매매하면-좋을까.md
scripts/: generate_math_images.py  maintenance.py  test_maintenance.py
scripts/data/: HEADER.md
scripts/generate_readme/: .gitignore  generate_readme.py  test_generate_readme.py
scripts/generate_readme/data/: HEADER.md
scripts/generate_tags/: generate_tags.py  requirements.txt  test_generate_tags.py
scripts/generate_tags/db/: schema.sql
scripts/guru_portfolio/: README.md  demo_output.md  main.py  pyproject.toml  test_performance_comparison.py
scripts/guru_portfolio/13f_portfolio_visualization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/guru_portfolio/docs/: prd.md  todo.md
scripts/guru_portfolio/modules/: __init__.py  data_fetcher.py  data_processor.py  performance_tracker.py  report_generator.py  visualizer.py
scripts/guru_portfolio/output/: error_report.md  portfolio_analysis.md
scripts/ipo-blog/: .gitignore  38_page.html  38comm_sample.html  debug_38_page.py  direct_page.html  ipo_list_page.html  ipo_page.html  main.py  requirements.md  requirements.txt  search_result_curl.html  test_subscription_filter.py
scripts/ipo-blog/db/: README.md  changelog.yaml  liquibase.properties  liquibase.sh
scripts/ipo-blog/docs/: design.md  prd.md  todo.md
scripts/ipo-blog/scrapers/: base_scraper.py  comm38_scraper.py  ipo_page.html  naver_scraper.py  test_ipo_list_debug.py  test_naver_scraper.py
scripts/stock_weekly/: README.md  pyproject.toml
scripts/stock_weekly/docs/: prd.md
scripts/stock_weekly/docs/example/: index.md
scripts/stock_weekly/modules/: __init__.py  capture_playwright_improved.py  next_week_event.py  next_week_events.md
src/components/: global-styles.js  header.js  seo.js  tags.js
src/components/GoogleAdsense/: index.jsx
src/components/GoogleAnalytics/: index.jsx
src/components/SEO/: index.jsx
src/pages/: 404.jsx  index.jsx  search.jsx  series.jsx  tags.js  tags.jsx
src/templates/: Post.jsx  Series.jsx  post-template.js
(+134 files in other folders)
