[project]
name = "cnn-fear-greed-capture"
version = "1.0.0"
description = "CNN Fear & Greed Index 게이지 차트를 자동으로 캡처하는 도구"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]


dependencies = [
    "selenium>=4.15.2",
    "pillow>=10.1.0",
    "webdriver-manager>=4.0.1",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
capture-basic = "main:capture_fear_greed_index"
capture-improved = "capture_improved:capture_fear_greed_index_improved"
capture-playwright = "capture_playwright:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"] 